--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "homepage": "https://github.com/glaucia86/chatbot-nodejs-imasters#readme",
   "dependencies": {
-    "botbuilder": "^3.14.1",
-    "dotenv-extended": "^2.0.2",
-    "restify": "^7.1.1"
+    "botbuilder": "^3.14.0",
+    "dotenv-extended": "^2.0.1",
+    "moment": "^2.20.1",
+    "restify": "^6.3.4"
   }
 }
